# Ferrite

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  ferrite-mcp.json
.github/workflows/: ci.yml  release.yml
app/: electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
app/src/main/: index.ts  settings.ts  sidecar.ts
app/src/preload/: index.d.ts  index.ts
app/src/renderer/: App.tsx  global.css  index.html  main.tsx
app/src/renderer/api/: activities.ts  auth.ts  client.ts  connections.ts  export.ts  queries.ts  schema.ts  versions.ts
app/src/renderer/components/editor/: BindVariablesDialog.tsx  EditorTabs.tsx  EditorToolbar.tsx  SqlEditor.tsx  completion.ts  linting.ts  theme.ts  tokenizer.ts
app/src/renderer/components/history/: ActivityPanel.tsx  EditVersionDialog.tsx  HistoryPanel.tsx  SaveDialog.tsx  SavedQueries.tsx
app/src/renderer/components/layout/: AppLayout.tsx  EditorPanel.tsx  Sidebar.tsx  StatusBar.tsx  UnlockDialog.tsx
app/src/renderer/components/results/: DataGrid.tsx  ExplainView.tsx  ExportDialog.tsx  ResultPanel.tsx
app/src/renderer/components/sidebar/: ConnectionDetail.tsx  ConnectionForm.tsx  ConnectionTree.tsx
app/src/renderer/lib/: monaco-setup.ts
app/src/renderer/stores/: layout.ts  results.ts  tabs.ts  theme.ts
app/src/renderer/types/: activity.ts  connection.ts  export.ts  history.ts  query.ts  schema.ts
crates/ferrite-core/: Cargo.toml
crates/ferrite-core/src/: lib.rs  traits.rs
crates/ferrite-core/src/types/: connection.rs  export.rs  history.rs  mod.rs  query.rs
crates/ferrite-crypto/: Cargo.toml
crates/ferrite-crypto/src/: keychain.rs  lib.rs  secure.rs  vault.rs
crates/ferrite-db/: Cargo.toml
crates/ferrite-db/src/: driver.rs  error.rs  explain.rs  introspect.rs  lib.rs  mysql.rs  pool.rs  postgres.rs  sql.rs  sqlite.rs  test_connect.rs  traits.rs  validate.rs
crates/ferrite-db/src/types/: connection.rs  query.rs  schema.rs
crates/ferrite-export/: Cargo.toml
crates/ferrite-export/src/: csv_export.rs  excel_export.rs  json_export.rs  lib.rs
crates/ferrite-mcp/: Cargo.toml
crates/ferrite-mcp/src/: lib.rs  state.rs  tools.rs  validate.rs
crates/ferrite-server/: Cargo.toml
crates/ferrite-server/src/: app.rs  auth.rs  dto.rs  embedded.rs  lib.rs  main.rs  state.rs
crates/ferrite-server/src/routes/: activity.rs  connections.rs  export.rs  history.rs  mod.rs  query.rs  schema.rs  settings.rs
crates/ferrite-server/src/ws/: mod.rs  query_stream.rs
crates/ferrite-store/: Cargo.toml
crates/ferrite-store/src/: activity.rs  connections.rs  history.rs  lib.rs  settings.rs  sql.rs  store.rs  versions.rs
crates/ferrite-store/src/migrations/: 001_init.sql  002_fts.sql  003_activity_log.sql
scripts/: build-all.sh  build-rust.sh  dev.sh
