[workspace]
resolver = "2"
members = [
    "crates/ferrite-crypto",
    "crates/ferrite-db",
    "crates/ferrite-store",
    "crates/ferrite-mcp",
    "crates/ferrite-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Subeen Pang"]
repository = "https://github.com/subinbg/Ferrite"

[workspace.dependencies]
# Internal crates
ferrite-crypto = { path = "crates/ferrite-crypto" }
ferrite-db = { path = "crates/ferrite-db" }
ferrite-store = { path = "crates/ferrite-store" }
ferrite-mcp = { path = "crates/ferrite-mcp" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
    "chrono",
    "uuid",
    "json",
] }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
base64 = "0.22"
bytes = "1"
futures = "0.3"
tokio-stream = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
