[package]
name = "ferrite-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ferrite-core.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
zeroize.workspace = true
thiserror.workspace = true
base64.workspace = true
serde.workspace = true
