[package]
name = "ferrite-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ferrite-core.workspace = true
sqlx.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
futures.workspace = true
regex-lite = "0.1"
