[package]
name = "ferrite-export"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ferrite-core.workspace = true
csv.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_xlsxwriter.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
