[package]
name = "ferrite-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ferrite-db.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
axum.workspace = true
rmcp = { version = "1.2", features = ["server", "transport-streamable-http-server", "macros"] }
schemars = "1"

# Shared state types
[dependencies.ferrite-crypto]
path = "../ferrite-crypto"
[dependencies.ferrite-store]
path = "../ferrite-store"
