[package]
name = "ferrite-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ferrite"
path = "src/main.rs"

[dependencies]
ferrite-core.workspace = true
ferrite-crypto.workspace = true
ferrite-db.workspace = true
ferrite-store.workspace = true
ferrite-export.workspace = true
ferrite-mcp.workspace = true

tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
clap.workspace = true
rust-embed.workspace = true
rand.workspace = true
base64.workspace = true
tokio-stream.workspace = true
futures.workspace = true
mime_guess = "2"
open = "5"
dirs = "6"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
