[package]
name = "ferrite-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ferrite-core.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
